Redone order and includes.

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.29 2009/09/01 13:13:50 ith Exp $
+% $Id: thesis.tex,v 1.30 2009/09/21 14:28:56 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -19,14 +19,14 @@ onehalfspacing % onehalfspacing or doublespacing
 % My formatting package
 % CVSon for cvs revision number in footers
 % CVSoff is default-
-\usepackage[%CVSon, % CVS version in footers
-%             labels, % show labels
+\usepackage[CVSon, % CVS version in footers
+            labels, % show labels
 	    todos, % show todos
-            %hyperref % Use hyperref for links
+            hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.29 2009/09/01 13:13:50 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.30 2009/09/21 14:28:56 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -37,11 +37,11 @@ abstract,
 % acknowledgements,
 mainintro,
 dbi/dbi-intro,
-% dbi/dbi,
+dbi/dbi,
 % dbi/multibrane,
 % numerical/perts,
 % numerical/numerical,
-% theend
+theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
