--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.35 2009/09/18 17:45:56 ith Exp $
+% $Id: dbi.tex,v 1.36 2009/09/21 14:45:45 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.35 2009/09/18 17:45:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.36 2009/09/21 14:45:45 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -114,7 +114,7 @@ given by
 \begin{equation}
 \label{eq:throatvolume}
 V_{6,\mathrm{throat}} = \mathrm{Vol}(X_5)  
-\int_0^{\rho_{UV}} d\rho \frac{\rho^5}{h^4(\rho )} \,,
+\int_0^{\rho_{UV}} \d\rho \frac{\rho^5}{h^4(\rho )} \,,
 \end{equation}
 % 
 where $\rho_{UV}$ denotes the radial coordinate at 
@@ -160,7 +160,7 @@ is given by the Lyth bound \eq{eq:genlyth-dbiintro}
 % 
 \begin{equation}
 \label{eq:rtheory}
-\frac{1}{\Mpl^2} \left( \frac{d\varphi}{d \N} \right)^2 =
+\frac{1}{\Mpl^2} \left( \frac{\d\varphi}{\d \N} \right)^2 =
 \frac{r}{8} \,,
 \end{equation}
 % 
