--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.25 2009/09/18 17:12:23 ith Exp $
+% $Id: multibrane.tex,v 1.26 2009/09/21 14:45:45 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.25 2009/09/18 17:12:23 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.26 2009/09/21 14:45:45 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -342,8 +342,8 @@ throat region has the form
 %  
 \begin{equation}
 \label{eq:conemetric-multi}
-ds_{10}^2= h^2 ( \rho) ds_4^2 + h^{-2} (\rho ) 
-\left( d\rho^2 +\rho^2 ds_{X_5}^2 \right) \,,
+\d s_{10}^2= h^2 ( \rho) \d s_4^2 + h^{-2} (\rho ) 
+\left( \d\rho^2 +\rho^2 \d s_{X_5}^2 \right) \,,
 \end{equation}
 %  
 where the `warp factor' $h(\rho )$ is a function of the radial 
