Change spectrum to \Pr

--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.26 2009/09/21 14:45:45 ith Exp $
+% $Id: multibrane.tex,v 1.27 2009/09/21 14:48:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.26 2009/09/21 14:45:45 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.27 2009/09/21 14:48:39 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1031,7 +1031,7 @@ that
 % 
 \begin{equation}
 \label{eq:usefulPs-multi}
-\Ps \simeq -\frac{1}{50} \frac{H^4}{T_3 h^4\sqrt{1+(n-1)^2Y}}
+\Pr \simeq -\frac{1}{50} \frac{H^4}{T_3 h^4\sqrt{1+(n-1)^2Y}}
 \frac{1}{\fnleq}\,.
 \end{equation}
 % 
@@ -1042,7 +1042,7 @@ the warp factor during observable inflation:
 \begin{equation}
 \label{eq:warpfactor-multi}
 \frac{h^4_*}{\Mpl^4} \simeq \frac{-1}{2 T_3 \sqrt{1+(n-1)^2Y}} 
-\frac{r^2 \Ps}{\fnleq} \,.
+\frac{r^2 \Pr}{\fnleq} \,.
 \end{equation}
 % 
 Eqs. (\ref{eq:csPXlimit}) and (\ref{eq:warpfactor-multi}) may now be substituted into 
@@ -1051,7 +1051,7 @@ the LH bound (\ref{eq:LHbound}) to yield
 \begin{equation}
 \label{eq:actualLH-multi}
 r_* < \frac{1100}{(\Delta \N )_*^6} 
-\frac{[1+(n-1)^2Y]}{\Vol} \Ps \fnleq^2 \,.
+\frac{[1+(n-1)^2Y]}{\Vol} \Pr \fnleq^2 \,.
 \end{equation}
 % 
 
