Fixed \fnleq double superscript error.

--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.29 2009/09/21 17:12:34 ith Exp $
+% $Id: multibrane.tex,v 1.30 2009/09/21 17:28:36 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.29 2009/09/21 17:12:34 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.30 2009/09/21 17:28:36 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1046,7 +1046,7 @@ the LH bound (\ref{eq:LHbound}) to yield
 \begin{equation}
 \label{eq:actualLH-multi}
 r_* < \frac{1100}{(\Delta \N )_*^6} 
-\frac{[1+(n-1)^2Y]}{\Vol} \Pr \fnleq^2 \,.
+\frac{[1+(n-1)^2Y]}{\Vol} \Pr (\fnleq)^2 \,.
 \end{equation}
 % 
 
@@ -1075,7 +1075,7 @@ the bound (\ref{eq:actualLH-multi}) simplifies to
 %  
 \begin{equation}
 \label{eq:AdSupper-multi}
-r_* < 2.8 \times 10^{-13} \frac{N}{(n-1)^2} \fnleq^2 \,.
+r_* < 2.8 \times 10^{-13} \frac{N}{(n-1)^2} (\fnleq)^2 \,.
 \end{equation}
 % 
 
