--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.36 2009/09/21 14:45:45 ith Exp $
+% $Id: dbi.tex,v 1.37 2009/09/22 09:06:31 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.36 2009/09/21 14:45:45 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.37 2009/09/22 09:06:31 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -751,6 +751,160 @@ could be relaxed if $f_1f_2 \gg 1$ on observable scales.
 It is therefore important to develop string-inspired models 
 where this condition arises naturally. We will explore this possibility in the
 next chapter.
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{Theoretic Upper Bounds on the Tensor-Scalar Ratio}
+\label{sec:theobound-multi}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
+\addtodo{Refer to dbi-intro chapter and defns there.}
+The ten-dimensional metric of the warped deformed conifold inside a  
+throat region has the form
+%  
+\begin{equation}
+\label{eq:conemetric-multi}
+\d s_{10}^2= h^2 ( \rho) \d s_4^2 + h^{-2} (\rho ) 
+\left( \d\rho^2 +\rho^2 \d s_{X_5}^2 \right) \,,
+\end{equation}
+%  
+where the `warp factor' $h(\rho )$ is a function of the radial 
+coordinate $\rho$ along the throat and $X_5$ denotes a five-dimensional, 
+Sasaki-Einstein manifold. In many scenarios, the ten-dimensional 
+manifold (\ref{eq:conemetric-multi}) can be approximated by the product 
+$AdS_5 \times X_5$, where $AdS_5$ represents five-dimensional, 
+anti-de Sitter space. In this case, the warp factor is given by
+%   
+\begin{equation}
+h = \frac{\rho}{L} , \qquad 
+L^4 = \frac{4\pi^4 g_s N}{\Vol m_s^4}\,,
+\end{equation}
+%  
+where $L$ denotes the $AdS_5$ radius of curvature, 
+$\Vol$ is the volume of the five-manifold $X_5$ with unit radius, 
+$N$ is the ${\rm D3}$-brane charge in the throat, 
+$g_s$ is the string coupling and $m_s$ is the string mass scale. 
+Generally the value of the inflaton field 
+is determined by the radial position of the 
+${\rm D3}$-brane in the throat, 
+$\varphi \equiv \rho \sqrt{T_3}$, where $T_3 \equiv  
+m_s^4/[(2\pi)^3g_s]$ is the brane tension. 
+
+
+The four-dimensional Planck mass is related to the volume 
+of the compactified Calabi-Yau three-fold, $V_6$, such that
+$\Mpl^2 =V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv \frac{1}{2}
+(2 \pi )^7 g_s^2/ m_s^{8} = \pi /T_3^{2}$ for a 
+${\rm D3}$-brane \footnote{We parameterise the Planck scale 
+in terms of the ${\rm D3}$-brane tension out of convenience, 
+and note that there is no physical relationship between the two.}. 
+Hence the Planck mass is bounded from 
+below by the volume of a throat region, 
+$\Mpl^2 >V_{6,{\rm th}} \kappa_{10}^{-2}$, 
+where $V_{6,{\rm th}} \lsim V_6$ denotes the throat volume. 
+For an $AdS_5 \times X_5$ throat, Baumann \& McAllister (BM)
+exploited this inequality to derive an upper limit on the 
+maximum variation of the inflaton field in the throat, 
+$\Delta \varphi_{\rm max} < 2\Mpl/\sqrt{N}$, which leads to the 
+corresponding limit $|\Delta \varphi |_* < 2\Mpl /\sqrt{N}$ \cite{bmpaper}.  
+Combining this with the constraint (\ref{eq:approxlyth-dbiintro}) therefore 
+yields an upper limit on the tensor-scalar ratio: 
+% 
+\begin{equation}
+\label{eq:BMbound-multi}
+r_* < \frac{32}{N \Neff^2} \left( 
+c_s P_{,X} \right)_* \,.
+\end{equation}
+% 
+
+
+\addtodo{ Change to reference chapter not paper. Change bound name?}
+Two of the authors (Lidsey \& Huston, LH) derived a complementary bound on the 
+tensor-scalar ratio by noting that during observable inflation
+the brane spans a fraction of the throat volume \cite{lidseyhuston}
+% 
+\begin{equation}
+\label{eq:approxvol}
+| \Delta V_{6,*} | \simeq \Vol \frac{| \Delta \rho_*| \rho_*^5}{h_*^4}
+\end{equation}
+% 
+and, since $| \Delta V_{6,*} |< 
+V_{6,{\rm th}}$, it follows that
+%  
+\begin{equation}
+\label{eq:firstbound-multi}
+\left(\frac{\Delta \varphi}{\Mpl}\right)^2_* < \frac{T_3 \kappa_{10}^2
+(\Delta \rho_*)^2}{| \Delta V_{6*}|} \,.
+\end{equation}
+% 
+It was then assumed that the fractional change in the value of the 
+inflaton field during observable inflation was less than unity:
+% 
+\begin{equation}
+\label{eq:delta1constraint}
+|\Delta \varphi_* | <  \varphi_* \,.
+\end{equation}
+%  
+This condition is necessarily satisfied in UV
+versions of the scenario, 
+where the brane is moving towards the tip of the throat, but must be 
+assumed as a further constraint in IR versions 
+where the brane moves out of the throat, since in these latter cases
+$\varphi_*$ could be very small. Combining the limit 
+(\ref{eq:delta1constraint}) with \eq{eq:approxvol} then implies that
+%  
+\begin{equation}
+| \Delta V_{6,*} | > \Vol \frac{( \Delta \rho_* )^6}{h_*^4}
+\end{equation}
+% 
+and substituting this constraint into the bound (\ref{eq:firstbound-multi})
+yields 
+the condition
+%  
+\begin{equation}
+\left( \frac{\Delta \varphi}{\Mpl} \right)_*^6 < \frac{\pi T_3}{\Vol} 
+\left( \frac{h_*}{\Mpl} \right)^4 \,.
+\end{equation}
+% 
+\addtodo{Should the above be removed if duplicate? Change to cite chapter not
+paper.}
+Finally substituting the constraint (\ref{eq:approxlyth-dbiintro}) 
+yields the upper limit \cite{lidseyhuston}
+% 
+\begin{equation}
+\label{eq:LHbound}
+r_* < \frac{10}{(\Delta \N)_*^2} \left( \frac{T_3}{\Vol} \right)^{1/3} 
+\left( \frac{h_*}{\Mpl} \right)^{4/3} \left( c_s P_{,X} \right)_* \,.
+\end{equation}
+% 
+
+
+Comparison of the limits (\ref{eq:BMbound-multi}) and (\ref{eq:LHbound})
+implies that the LH bound is the stronger of the two when
+% 
+\begin{equation}
+\label{eq:LHstronger}
+h_*^{4/3}N < 20 \left( \Vol g_s \right)^{1/3}  
+\left( \frac{m_s}{\Mpl} \right)^{-4/3} 
+\frac{( \Delta \N )_*^2}{\Neff^2} \,.
+\end{equation}
+% 
+For typical field-theoretic values $\Vol \simeq \mathcal{O}(\pi^3)$, $m_s \sim
+0.1 \Mpl$ 
+and  $g_s \sim 10^{-2}$, this implies
+%  
+\begin{equation}
+\label{eq:LHstronger1}
+h_*^{4/3} N < 300 \frac{(\Delta \N)^2_*}{\Neff^2} \,.
+\end{equation}
+% 
+
+
+In the following Section, we identify a class of models in which  
+these bounds could be relaxed. 
 % 
 % 
 % 
