--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.37 2009/09/22 09:06:31 ith Exp $
+% $Id: dbi.tex,v 1.38 2009/09/22 09:14:35 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.37 2009/09/22 09:06:31 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.38 2009/09/22 09:14:35 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -105,7 +105,10 @@ derived a field-theoretic upper bound on the tensor-scalar ratio. They achieved
 this by noting that the four-dimensional Planck mass is related 
 to the volume of the compactified CY manifold, $V_6$, such that 
 $\Mpl^2=V_6 \kappa_{10}^{-2}$, where $\kappa_{10}^2 \equiv 
-\frac{1}{2} (2\pi )^7 g_s^2 m_s^{-8}$.
+\frac{1}{2} (2\pi )^7 g_s^2 m_s^{-8} = \pi /T_3^{2}$ for a 
+${\rm D3}$-brane \footnote{We parameterise the Planck scale 
+in terms of the ${\rm D3}$-brane tension out of convenience, 
+and note that there is no physical relationship between the two.}.
 In general, the compactified volume 
 is comprised of bulk and throat contributions, 
 $V_6 = V_{6,{\rm bulk}}+V_{6,{\rm throat}}$. The latter is 
@@ -761,37 +764,37 @@ next chapter.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-\addtodo{Refer to dbi-intro chapter and defns there.}
-The ten-dimensional metric of the warped deformed conifold inside a  
-throat region has the form
-%  
-\begin{equation}
-\label{eq:conemetric-multi}
-\d s_{10}^2= h^2 ( \rho) \d s_4^2 + h^{-2} (\rho ) 
-\left( \d\rho^2 +\rho^2 \d s_{X_5}^2 \right) \,,
-\end{equation}
-%  
-where the `warp factor' $h(\rho )$ is a function of the radial 
-coordinate $\rho$ along the throat and $X_5$ denotes a five-dimensional, 
-Sasaki-Einstein manifold. In many scenarios, the ten-dimensional 
-manifold (\ref{eq:conemetric-multi}) can be approximated by the product 
-$AdS_5 \times X_5$, where $AdS_5$ represents five-dimensional, 
-anti-de Sitter space. In this case, the warp factor is given by
-%   
-\begin{equation}
-h = \frac{\rho}{L} , \qquad 
-L^4 = \frac{4\pi^4 g_s N}{\Vol m_s^4}\,,
-\end{equation}
-%  
-where $L$ denotes the $AdS_5$ radius of curvature, 
-$\Vol$ is the volume of the five-manifold $X_5$ with unit radius, 
-$N$ is the ${\rm D3}$-brane charge in the throat, 
-$g_s$ is the string coupling and $m_s$ is the string mass scale. 
-Generally the value of the inflaton field 
-is determined by the radial position of the 
-${\rm D3}$-brane in the throat, 
-$\varphi \equiv \rho \sqrt{T_3}$, where $T_3 \equiv  
-m_s^4/[(2\pi)^3g_s]$ is the brane tension. 
+% \addtodo{Refer to dbi-intro chapter and defns there.}
+% The ten-dimensional metric of the warped deformed conifold inside a  
+% throat region has the form
+% %  
+% \begin{equation}
+% \label{eq:conemetric-multi}
+% \d s_{10}^2= h^2 ( \rho) \d s_4^2 + h^{-2} (\rho ) 
+% \left( \d\rho^2 +\rho^2 \d s_{X_5}^2 \right) \,,
+% \end{equation}
+% %  
+% where the `warp factor' $h(\rho )$ is a function of the radial 
+% coordinate $\rho$ along the throat and $X_5$ denotes a five-dimensional, 
+% Sasaki-Einstein manifold. In many scenarios, the ten-dimensional 
+% manifold (\ref{eq:conemetric-multi}) can be approximated by the product 
+% $AdS_5 \times X_5$, where $AdS_5$ represents five-dimensional, 
+% anti-de Sitter space. In this case, the warp factor is given by
+% %   
+% \begin{equation}
+% h = \frac{\rho}{L} , \qquad 
+% L^4 = \frac{4\pi^4 g_s N}{\Vol m_s^4}\,,
+% \end{equation}
+% %  
+% where $L$ denotes the $AdS_5$ radius of curvature, 
+% $\Vol$ is the volume of the five-manifold $X_5$ with unit radius, 
+% $N$ is the ${\rm D3}$-brane charge in the throat, 
+% $g_s$ is the string coupling and $m_s$ is the string mass scale. 
+% Generally the value of the inflaton field 
+% is determined by the radial position of the 
+% ${\rm D3}$-brane in the throat, 
+% $\varphi \equiv \rho \sqrt{T_3}$, where $T_3 \equiv  
+% m_s^4/[(2\pi)^3g_s]$ is the brane tension. 
 
 
 The four-dimensional Planck mass is related to the volume 
