--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.31 2009/09/22 09:06:31 ith Exp $
+% $Id: multibrane.tex,v 1.32 2009/09/22 10:09:54 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.31 2009/09/22 09:06:31 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.32 2009/09/22 10:09:54 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -368,7 +368,7 @@ c_s P_{,X} = 1 , \qquad  \Lambda = \frac{1}{2} \left(
 \end{equation}
 % 
 It follows that the 
-bounds (\ref{eq:BMbound-multi}) and (\ref{eq:LHbound}) 
+bounds (\ref{eq:genBMbound}) and (\ref{eq:LHbound}) 
 on the tensor-scalar ratio could in principle be 
 significantly relaxed in models where $(c_sP_{,X})_* \gg 1$. 
 In view of the second relation in \eq{eq:cspx1}, it is of interest 
@@ -468,7 +468,8 @@ we find from \eq{eq:fnldefn-dbiintro} that
 \end{eqnarray}
 % 
 Hence substituting Eqs. (\ref{eq:consequence-multi}) and (\ref{eq:consequence3-multi}) 
-into the BM bound (\ref{eq:BMbound-multi}) and the LH bound (\ref{eq:LHbound}) implies that
+into the BM bound (\ref{eq:genBMbound}) and the LH bound (\ref{eq:LHbound})
+implies that
 %  
 \begin{equation}
 \label{eq:weakBM-multi}
@@ -1023,7 +1024,7 @@ holds.
 
 
 For completeness we should also consider the 
-BM bound (\ref{eq:BMbound-multi}) for this class of models. This is given by 
+BM bound (\ref{eq:genBMbound}) for this class of models. This is given by 
 % 
 \begin{equation}
 \label{eq:BMAdS-multi}
